--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Spotify": {
+    "ClientId": "a610b85fb47248aaac8598f460fc05a5",
+    "ClientSecret": "1ce9af79ec8f4ea1b3781ed2a81d4441",
+    "RedirectUri": "https://localhost:7250/auth/callback"
+  }
 }
